--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 *.class
 *.log
+
+# sbt
+# (may want to keep parts of 'project')
+bin/
+project/
+target/
+build/
+
+# intellij idea
+*.log
+*.iml
+*.ipr
+*.iws
+.idea
